--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -277,7 +277,7 @@ section {
   top: 0;
   z-index: -1;
   height: 100%;
-  width: 100vw;
+  width: 100%;
 }
 
 .third--screen {
@@ -307,8 +307,6 @@ section {
   display: grid;
   margin: 3rem;
   padding: 2rem;
-  -ms-grid-columns: (minmax(fitcontent, 33%))[3];
-      grid-template-columns: repeat(3, minmax(fitcontent, 33%));
   -ms-grid-rows: (fitcontent)[3];
       grid-template-rows: repeat(3, fitcontent);
   background: #d0baa7;
@@ -317,10 +315,25 @@ section {
   color: #2a283f;
 }
 
-.content form .form--header, .content form .form--1col, .content form .form--footer {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
+.content form .form--text--input {
+  position: relative;
+  height: 50px;
+  width: 100%;
+  padding-bottom: 0px;
+  padding-top: 20px;
+  border: none;
+}
+
+.content form .form--label--text {
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.content form .form--header, .content form .form--footer {
+  grid-column: 1/-1;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
@@ -332,43 +345,49 @@ section {
   color: #2a283f;
 }
 
-.content form .form--header p, .content form .form--1col p, .content form .form--footer p {
+.content form .form--header p, .content form .form--footer p {
   width: 100%;
   color: #2a283f;
   font-size: 2rem;
 }
 
-.content form .form--header svg, .content form .form--1col svg, .content form .form--footer svg {
+.content form .form--header svg, .content form .form--footer svg {
   margin: 0.5rem;
   font-size: 3rem;
   color: #2a283f;
 }
 
-.content form .form--1col {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
+.content form .form--data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.content form .form--data .form--1col {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
 }
 
-.content form .form--2col, .content form .form--3col {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
+.content form .form--data .form--2col {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
 }
 
-.content form .form--3col {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
+.content form .form--data .form--3col {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
 }
 
 .content form .form--footer {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
+  grid-column: 1/-1;
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3/4;
