--- a/CSS/0-helpers/_mixins.scss
+++ b/CSS/0-helpers/_mixins.scss
@@ -1,8 +1,8 @@
-@mixin svg--a {
+@mixin svg--a($fontSize) {
   a:link,
   a:visited {
     margin: 1rem;
-    font-size: 2rem;
+    font-size: $fontSize;
     color: $cCafe-5;
     filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
   }
@@ -18,10 +18,10 @@
   a:link,
   a:visited {
     position: relative;
-    z-index: 1;
     text-decoration: none;
     color: $cWhiteD-2;
-    margin: 1rem;
+    z-index: 1;
+
     &::after {
       content: "";
       position: absolute;
