--- a/CSS/2-base/_header-fs.scss
+++ b/CSS/2-base/_header-fs.scss
@@ -1,20 +1,39 @@
-.main-header {
+.main--header {
   display: grid;
-  // grid-template-columns: repeat(2, minmax(1fr, 1fr));
-  grid-template-rows: 1fr fit-content;
+  grid-template-rows: repeat(2, minmax(1fr, fit-content));
   justify-content: center;
   position: relative;
 
-  .gkg--lrg {
-    display: inline;
-    font-size: 6rem;
-    margin: 3rem 0rem;
-    text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
-  }
   p {
     bottom: 30px;
     font-size: 1.3rem;
     width: 600px;
+  }
+}
+
+.header--flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+  .header--col {
+    @include anchor;
+
+    .gkg--lrg {
+      display: inline-block;
+      font-size: 6rem;
+      margin: 3rem 0rem 1rem;
+      text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
+    }
+
+    p {
+      display: inline;
+      margin: 0;
+    }
+
+    a {
+      font-weight: bold;
+    }
   }
 }
 
@@ -25,19 +44,18 @@
   font-size: 2em;
   top: 0;
   right: 0;
-  margin: 3rem 2rem;
-  @include svg--a;
+  margin: 2rem 1rem;
+  @include svg--a(2rem);
 }
-.flex--container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
 
-  h1 {
-    width: 50%;
-  }
-
-  img {
-    width: 321px;
-  }
+.header--b--icons {
+  @include svg--a(3rem);
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  bottom: 1rem;
+  font-size: 6rem;
 }
