--- a/CSS/2-base/_nav.scss
+++ b/CSS/2-base/_nav.scss
@@ -1,7 +1,7 @@
 @import "../0-helpers/variables";
 
 .nav--bg {
-  background: $cBlue;
+  background: $cBlue linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   position: sticky;
   top: 0;
   bottom: 0;
@@ -10,11 +10,11 @@
 }
 
 #main--nav {
-  background: $cBlue;
   display: flex;
   justify-content: space-between;
   width: 80%;
   margin: 0 auto;
+  @include anchor();
 
   .gkg {
     font-size: 1.4rem;
@@ -31,8 +31,8 @@
 
   li {
     list-style: none;
+    margin: 1rem;
   }
-  @include anchor();
 }
 
 #bottom--nav {
@@ -42,5 +42,5 @@
   position: sticky;
   bottom: 0;
   margin: 0 0 0 calc(100% - 4rem);
-  @include svg--a();
+  @include svg--a(2rem);
 }
