--- a/CSS/0-helpers/_mixins.scss
+++ b/CSS/0-helpers/_mixins.scss
@@ -1,10 +1,9 @@
-@mixin svg--a($fontSize) {
+@mixin svg--a($margin, $fontSize) {
   a:link,
   a:visited {
-    margin: 1rem;
+    margin: $margin;
     font-size: $fontSize;
     color: $cCafe-5;
-    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
   }
   a:hover,
   a:active,
@@ -46,4 +45,8 @@
       transform-origin: left;
     }
   }
+}
+
+@mixin ds {
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
