--- a/CSS/2-base/_header-fs.scss
+++ b/CSS/2-base/_header-fs.scss
@@ -37,6 +37,8 @@
   }
 }
 
+// ICONS
+
 .header--icons {
   display: flex;
   flex-direction: column;
@@ -44,12 +46,14 @@
   font-size: 2em;
   top: 0;
   right: 0;
-  margin: 2rem 1rem;
-  @include svg--a(2rem);
+  @include svg--a(1rem, 2rem);
+  @include ds;
 }
 
 .header--b--icons {
-  @include svg--a(3rem);
+  @include svg--a(1rem, 3rem);
+  @include ds;
+
   text-align: center;
   position: absolute;
   left: 0;
