--- a/CSS/2-base/_nav.scss
+++ b/CSS/2-base/_nav.scss
@@ -42,5 +42,6 @@
   position: sticky;
   bottom: 0;
   margin: 0 0 0 calc(100% - 4rem);
-  @include svg--a(2rem);
+  @include svg--a(1rem, 2rem);
+  @include ds;
 }
