--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -135,7 +135,8 @@ p {
   font-size: 2em;
   top: 0;
   right: 0;
-  margin: 2rem 1rem;
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+          filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
 
 .header--icons a:link,
@@ -143,8 +144,6 @@ p {
   margin: 1rem;
   font-size: 2rem;
   color: #a67a62;
-  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
-          filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
 
 .header--icons a:hover,
@@ -155,6 +154,8 @@ p {
 }
 
 .header--b--icons {
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+          filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
   text-align: center;
   position: absolute;
   left: 0;
@@ -170,8 +171,6 @@ p {
   margin: 1rem;
   font-size: 3rem;
   color: #a67a62;
-  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
-          filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
 
 .header--b--icons a:hover,
@@ -291,6 +290,8 @@ p {
   position: sticky;
   bottom: 0;
   margin: 0 0 0 calc(100% - 4rem);
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+          filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
 
 #bottom--nav a:link,
@@ -298,8 +299,6 @@ p {
   margin: 1rem;
   font-size: 2rem;
   color: #a67a62;
-  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
-          filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
 
 #bottom--nav a:hover,
@@ -538,7 +537,38 @@ section {
 }
 
 footer {
-  background: #d0baa7;
+  position: relative;
+  background: #d0baa7 -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.2)));
+  background: #d0baa7 linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+  height: 30vh;
+  color: #2a283f;
+}
+
+footer a {
+  margin: 0;
+}
+
+footer .footer--b--icons a:link,
+footer .footer--b--icons a:visited {
+  margin: 0.5rem;
+  font-size: 2rem;
+  color: #a67a62;
+}
+
+footer .footer--b--icons a:hover,
+footer .footer--b--icons a:active,
+footer .footer--b--icons a:focus {
+  outline: none;
+  color: #eee6c6;
+}
+
+footer .copy {
+  display: inline;
+  position: absolute;
+  font-weight: bold;
+  margin: 0.5rem;
+  bottom: 0;
+  right: 0;
 }
 
 img {
