--- a/CSS/main/main.scss
+++ b/CSS/main/main.scss
@@ -4,13 +4,5 @@
 @import "../1-tools/tools-dir";
 //  BASE
 @import "../2-base/base-dir";
-
-h1 {
-  margin: 0;
-}
-
-#b2t {
-  background: green;
-  position: sticky;
-  bottom: 0;
-}
+// MEDIA QUERIES
+@import "../3-queries/queries-dir";
