--- a/CSS/2-base/_body.scss
+++ b/CSS/2-base/_body.scss
@@ -3,27 +3,56 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: $cBlue;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, fit-content);
+  grid-template-areas: "header" "top--nav" "main" "bottom--nav" "footer";
+  header {
+    grid-area: header;
+  }
+  #top--nav {
+    grid-area: top--nav;
+  }
+  main {
+    grid-area: main;
+  }
+  #bottom--nav {
+    grid-area: bottom--nav;
+  }
+  footer {
+    grid-area: footer;
+  }
 }
 
 .gkg {
   color: $cCafe-5;
   font-family: forum;
 }
+
 h1 {
   font-size: 4rem;
   text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
 }
+
 h2 {
   font-size: 2.5rem;
   text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
 }
-p {
-  margin: 1em 3rem;
+
+h3 {
+  font-size: 2rem;
+  text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
+}
+
+.egg--p {
   color: $cEgg-1;
+}
+
+.title--a {
+  text-decoration: none;
 }
