--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -5,24 +5,32 @@
     text-align: center;
     margin: 2rem auto;
   }
+  h2 {
+    text-align: center;
+    margin: 2rem auto;
+  }
+  h3 {
+    text-align: center;
+    margin: 2rem auto;
+  }
   p {
     text-align: center;
-    margin: 1rem 0;
+    margin: 1rem;
     font-size: 2rem;
   }
 
   // FORM
 
   form {
-    display: grid;
-    margin: 3rem;
-    padding: 2rem;
-    // grid-template-columns: repeat(3, minmax(fitcontent, 33%));
-    grid-template-rows: repeat(3, fit-content);
-    background: $cSand-3;
     font-weight: bold;
-    font-size: 1.5rem;
+    display: grid;
+    grid-template-rows: repeat(3, fit-content);
+    border-radius: 10px;
+    background: $cSand-3;
     color: $cBlue;
+    margin: 3rem 0rem;
+    padding: 2rem;
+    font-size: 1.5rem;
 
     // FORM HEADER
     .form--header {
@@ -43,6 +51,7 @@
         color: $cBlue;
       }
     }
+
     // FORM DATA
     .form--data {
       display: flex;
@@ -50,7 +59,19 @@
       justify-content: space-evenly;
 
       .form--col {
-        margin: 1rem;
+        justify-content: flex-start;
+        width: 260px;
+        margin: 0.5rem;
+
+        textarea {
+          box-sizing: border-box;
+          border-radius: 10px;
+          padding: 0.5rem;
+        }
+        .form--time--option {
+          font-weight: lighter;
+          font-size: large;
+        }
       }
     }
     // SUBMIT
@@ -67,10 +88,6 @@
       font-style: italic;
       overflow-wrap: break-word;
     }
-  }
-  .form--time--option {
-    font-weight: lighter;
-    font-size: large;
   }
 
   // AGENTS
@@ -101,12 +118,32 @@
     address {
       color: $cCamel-4;
       line-height: 2rem;
+      @include anchor;
     }
     .bio {
-      width: 321px;
+      width: 400px;
     }
-    .bio--m {
-      margin-left: 3rem;
+  }
+
+  // WHY US
+
+  .why--us {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-gap: 1rem;
+    .why--us--box {
+      .why--us--box--h3 {
+        top: 0;
+        height: fit-content;
+        margin: 1rem;
+      }
+      .why--us--box--p {
+        color: $cBlue;
+        background: $cSand-3;
+        border-radius: 10px;
+        padding: 1rem;
+        margin: 1rem;
+      }
     }
   }
 }
