--- a/CSS/2-base/_header-fs.scss
+++ b/CSS/2-base/_header-fs.scss
@@ -1,20 +1,20 @@
 .main--header {
   display: grid;
-  grid-template-rows: repeat(2, minmax(1fr, fit-content));
+  grid-template-rows: repeat(2, minmax(fit-content, 455px));
+  grid-template-columns: repeat(autofit, minmax(200px, 1fr));
   justify-content: center;
   position: relative;
 
   p {
-    bottom: 30px;
     font-size: 1.3rem;
-    width: 600px;
   }
 }
 
 .header--flex {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 0;
 
   .header--col {
     @include anchor;
@@ -34,6 +34,10 @@
     a {
       font-weight: bold;
     }
+
+    img {
+      margin-left: 1rem;
+    }
   }
 }
 
@@ -46,20 +50,31 @@
   font-size: 2em;
   top: 0;
   right: 0;
-  @include svg--a(1rem, 2rem);
+  @include svg--a(0.5rem 1rem, 2.5rem);
   @include ds;
 }
 
 .header--b--icons {
-  @include svg--a(1rem, 3rem);
+  @include svg--a(1rem 0.8rem, 3rem);
   @include ds;
 
+  display: inline;
   text-align: center;
   position: absolute;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  bottom: 1rem;
+  bottom: 0rem;
   font-size: 6rem;
+}
+
+.rr--logo {
+  position: absolute;
+  background: white;
+  bottom: 1rem;
+  right: 1rem;
+  width: 20%;
+  margin: 0;
+  padding: 0.5rem;
 }
