--- a/CSS/2-base/_screens.scss
+++ b/CSS/2-base/_screens.scss
@@ -7,7 +7,7 @@ section {
 .screen {
   display: grid;
   grid-template-columns: 10vw 80vw 10vw;
-  margin: 2rem 0;
+  margin-bottom: 2rem;
 }
 
 .first--screen {
