--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -8,11 +8,47 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: #2a283f;
+  margin: 0;
+  padding: 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (fit-content)[auto-fit];
+      grid-template-rows: repeat(auto-fit, -webkit-fit-content);
+      grid-template-rows: repeat(auto-fit, fit-content);
+      grid-template-areas: "header" "top--nav" "main" "bottom--nav" "footer";
+}
+
+body header {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: header;
+}
+
+body #top--nav {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: top--nav;
+}
+
+body main {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: main;
+}
+
+body #bottom--nav {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  grid-area: bottom--nav;
+}
+
+body footer {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+  grid-area: footer;
 }
 
 .gkg {
@@ -30,17 +66,27 @@ h2 {
   text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
 }
 
-p {
-  margin: 1em 3rem;
+h3 {
+  font-size: 2rem;
+  text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
+}
+
+.egg--p {
   color: #f1ead4;
+}
+
+.title--a {
+  text-decoration: none;
 }
 
 .main--header {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (minmax(1fr, fit-content))[2];
-      grid-template-rows: repeat(2, minmax(1fr, -webkit-fit-content));
-      grid-template-rows: repeat(2, minmax(1fr, fit-content));
+  -ms-grid-rows: (minmax(fit-content, 455px))[2];
+      grid-template-rows: repeat(2, minmax(-webkit-fit-content, 455px));
+      grid-template-rows: repeat(2, minmax(fit-content, 455px));
+  -ms-grid-columns: (minmax(200px, 1fr))[autofit];
+      grid-template-columns: repeat(autofit, minmax(200px, 1fr));
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -48,9 +94,7 @@ p {
 }
 
 .main--header p {
-  bottom: 30px;
   font-size: 1.3rem;
-  width: 600px;
 }
 
 .header--flex {
@@ -59,9 +103,10 @@ p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0;
 }
 
 .header--flex .header--col a:link,
@@ -123,6 +168,10 @@ p {
   font-weight: bold;
 }
 
+.header--flex .header--col img {
+  margin-left: 1rem;
+}
+
 .header--icons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -141,8 +190,8 @@ p {
 
 .header--icons a:link,
 .header--icons a:visited {
-  margin: 1rem;
-  font-size: 2rem;
+  margin: 0.5rem 1rem;
+  font-size: 2.5rem;
   color: #a67a62;
 }
 
@@ -156,19 +205,20 @@ p {
 .header--b--icons {
   -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
           filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+  display: inline;
   text-align: center;
   position: absolute;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  bottom: 1rem;
+  bottom: 0rem;
   font-size: 6rem;
 }
 
 .header--b--icons a:link,
 .header--b--icons a:visited {
-  margin: 1rem;
+  margin: 1rem 0.8rem;
   font-size: 3rem;
   color: #a67a62;
 }
@@ -178,6 +228,16 @@ p {
 .header--b--icons a:focus {
   outline: none;
   color: #eee6c6;
+}
+
+.rr--logo {
+  position: absolute;
+  background: white;
+  bottom: 1rem;
+  right: 1rem;
+  width: 20%;
+  margin: 0;
+  padding: 0.5rem;
 }
 
 @font-face {
@@ -195,6 +255,7 @@ p {
   -webkit-box-shadow: 0px 5px 10px 0px;
           box-shadow: 0px 5px 10px 0px;
   z-index: 2;
+  height: 12vh;
 }
 
 #main--nav {
@@ -325,7 +386,7 @@ section {
   display: grid;
   -ms-grid-columns: 10vw 80vw 10vw;
       grid-template-columns: 10vw 80vw 10vw;
-  margin: 2rem 0;
+  margin-bottom: 2rem;
 }
 
 .first--screen {
@@ -363,24 +424,35 @@ section {
   margin: 2rem auto;
 }
 
+.content h2 {
+  text-align: center;
+  margin: 2rem auto;
+}
+
+.content h3 {
+  text-align: center;
+  margin: 2rem auto;
+}
+
 .content p {
   text-align: center;
-  margin: 1rem 0;
+  margin: 1rem;
   font-size: 2rem;
 }
 
 .content form {
+  font-weight: bold;
   display: -ms-grid;
   display: grid;
-  margin: 3rem;
-  padding: 2rem;
   -ms-grid-rows: (fit-content)[3];
       grid-template-rows: repeat(3, -webkit-fit-content);
       grid-template-rows: repeat(3, fit-content);
+  border-radius: 10px;
   background: #d0baa7;
-  font-weight: bold;
-  font-size: 1.5rem;
   color: #2a283f;
+  margin: 3rem 0rem;
+  padding: 2rem;
+  font-size: 1.5rem;
 }
 
 .content form .form--header, .content form .form--footer {
@@ -420,7 +492,23 @@ section {
 }
 
 .content form .form--data .form--col {
-  margin: 1rem;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 260px;
+  margin: 0.5rem;
+}
+
+.content form .form--data .form--col textarea {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+.content form .form--data .form--col .form--time--option {
+  font-weight: lighter;
+  font-size: large;
 }
 
 .content form #submit {
@@ -439,11 +527,6 @@ section {
   grid-row: 4/5;
   font-style: italic;
   overflow-wrap: break-word;
-}
-
-.content .form--time--option {
-  font-weight: lighter;
-  font-size: large;
 }
 
 .content .agents {
@@ -528,12 +611,75 @@ section {
   line-height: 2rem;
 }
 
-.content .agents .bio {
-  width: 321px;
+.content .agents address a:link,
+.content .agents address a:visited {
+  position: relative;
+  text-decoration: none;
+  color: #eee6c6;
+  z-index: 1;
 }
 
-.content .agents .bio--m {
-  margin-left: 3rem;
+.content .agents address a:link::after,
+.content .agents address a:visited::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  width: 100%;
+  height: 2px;
+  background: currentColor;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  -webkit-transition: -webkit-transform 250ms ease-in;
+  transition: -webkit-transform 250ms ease-in;
+  transition: transform 250ms ease-in;
+  transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
+}
+
+.content .agents address a:hover,
+.content .agents address a:active,
+.content .agents address a:focus {
+  outline: none;
+  color: #c3a082;
+}
+
+.content .agents address a:hover::after,
+.content .agents address a:active::after,
+.content .agents address a:focus::after {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+}
+
+.content .agents .bio {
+  width: 400px;
+}
+
+.content .why--us {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 1rem;
+}
+
+.content .why--us .why--us--box .why--us--box--h3 {
+  top: 0;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: 1rem;
+}
+
+.content .why--us .why--us--box .why--us--box--p {
+  color: #2a283f;
+  background: #d0baa7;
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem;
 }
 
 footer {
@@ -544,8 +690,23 @@ footer {
   color: #2a283f;
 }
 
+footer p {
+  padding: 1rem;
+  margin: 2rem;
+  text-align: center;
+  color: #2a283f;
+}
+
 footer a {
   margin: 0;
+}
+
+footer .footer--b--icons {
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+          filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
 }
 
 footer .footer--b--icons a:link,
@@ -566,7 +727,6 @@ footer .copy {
   display: inline;
   position: absolute;
   font-weight: bold;
-  margin: 0.5rem;
   bottom: 0;
   right: 0;
 }
@@ -578,14 +738,12 @@ img {
           box-shadow: 0px 0px 20px 5px;
 }
 
-h1 {
-  margin: 0;
-}
-
-#b2t {
-  background: green;
-  position: -webkit-sticky;
-  position: sticky;
-  bottom: 0;
+@media (max-width: 790px) {
+  header img {
+    display: none;
+  }
+  header .header--col {
+    width: 300px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
