--- a/CSS/0-helpers/_mixins.scss
+++ b/CSS/0-helpers/_mixins.scss
@@ -24,14 +24,13 @@
     &::after {
       content: "";
       position: absolute;
+      background: currentColor;
+      transform: scaleX(0);
       left: 0;
       bottom: -8px;
       width: 100%;
-      height: 2px;
-      background: currentColor;
-
-      transform: scaleX(0);
       transform-origin: right;
+      height: 2px;
       transition: transform 250ms ease-in;
     }
   }
@@ -44,6 +43,47 @@
       transform: scaleX(1);
       transform-origin: left;
     }
+  }
+}
+
+@mixin anchor--alt {
+  a:link,
+  a:visited {
+    // .blog--title {
+
+    // }
+    // .blog--p {
+
+    // }
+    position: relative;
+    text-decoration: none;
+    z-index: 1;
+    // transform: scaleX(0.9);
+    // transform: scaleY(0.9);
+    width: 90%;
+    height: 90%;
+  }
+  a:hover,
+  a:active,
+  a:focus {
+    .blog--title {
+      padding: 1rem;
+      font-size: 2.5rem;
+    }
+    .blog--p {
+      padding: 1.2rem 1.2rem 1.2rem 220px;
+      border: 6px solid $cCafe-5;
+    }
+    .blog--img {
+      border: 6px solid $cCafe-5;
+    }
+    // background: rgba(0, 0, 0, 1), $cSand-3;
+    // box-shadow: 0 0 20px 5px rgba(0, 0, 0, 1);
+    outline: none;
+    // transform: scaleX(1);
+    // transform: scaleY(1);
+    width: 95%;
+    height: 95%;
   }
 }
 
