--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -15,11 +15,64 @@
   }
   p {
     text-align: center;
-    margin: 1rem;
+    padding: 1rem;
     font-size: 2rem;
   }
 
-  // FORM
+  // BLOGS
+
+  .blog--flex {
+    @include anchor--alt;
+    display: flex;
+    flex-flow: column;
+    flex-grow: 1;
+    align-items: center;
+
+    .blog--box {
+      position: relative;
+      box-sizing: content-box;
+      display: grid;
+      grid-template-columns: 200px 3fr;
+      grid-template-rows: repeat(2, 100px);
+      margin: 0.5rem;
+
+      .blog--img {
+        border-radius: 10px;
+        margin: auto;
+        width: 80%;
+        max-height: 100%;
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+      }
+
+      .blog--title {
+        position: absolute;
+        font-weight: bolder;
+        align-self: center;
+        font-size: 2rem;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+
+      .blog--p {
+        position: absolute;
+        align-self: center;
+        justify-self: center;
+        background: $cSand-3;
+        color: $cBlue;
+        font-size: 1.3rem;
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        margin-top: 0;
+        padding: 1rem;
+        padding-left: 220px;
+        border-radius: 10px;
+        z-index: -1;
+      }
+    }
+  }
+
+  // CONTACT US FORM
 
   form {
     font-weight: bold;
@@ -28,7 +81,7 @@
     border-radius: 10px;
     background: $cSand-3;
     color: $cBlue;
-    margin: 3rem 0rem;
+    margin: 3rem 0;
     padding: 2rem;
     font-size: 1.5rem;
 
@@ -52,7 +105,7 @@
       }
     }
 
-    // FORM DATA
+    // FORM DATA v
     .form--data {
       display: flex;
       flex-wrap: wrap;
@@ -74,13 +127,14 @@
         }
       }
     }
-    // SUBMIT
+    // SUBMIT vv
     #submit {
       width: fit-content;
       padding: 1rem;
       justify-self: center;
+      margin-top: 1rem;
     }
-    // FORM FOOTER
+    // FORM FOOTER vv
     .form--footer {
       @extend .form--header;
       grid-column: 1/-1;
@@ -90,7 +144,7 @@
     }
   }
 
-  // AGENTS
+  // AGENTS v
 
   .agents {
     display: flex;
@@ -112,16 +166,22 @@
       margin-bottom: 1rem;
     }
     img {
+      margin: 2rem 0;
       background: white;
     }
 
     address {
+      @include anchor;
       color: $cCamel-4;
       line-height: 2rem;
-      @include anchor;
     }
     .bio {
       width: 400px;
+
+      color: $cBlue;
+      background: $cSand-3;
+      border-radius: 10px;
+      padding: 1rem;
     }
   }
 
@@ -133,6 +193,7 @@
     grid-gap: 1rem;
     .why--us--box {
       .why--us--box--h3 {
+        font-size: 3rem;
         top: 0;
         height: fit-content;
         margin: 1rem;
@@ -143,6 +204,10 @@
         border-radius: 10px;
         padding: 1rem;
         margin: 1rem;
+        p {
+          margin: 0;
+          font-size: 1.5rem;
+        }
       }
     }
   }
