--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -51,6 +51,14 @@ body footer {
   grid-area: footer;
 }
 
+main {
+  max-width: 80vw;
+}
+
+main h1 {
+  padding-top: 100px;
+}
+
 .gkg {
   color: #a67a62;
   font-family: forum;
@@ -58,21 +66,22 @@ body footer {
 
 h1 {
   font-size: 4rem;
-  text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
 }
 
 h2 {
   font-size: 2.5rem;
-  text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
 }
 
 h3 {
   font-size: 2rem;
-  text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
 }
 
 .egg--p {
   color: #f1ead4;
+}
+
+.ts {
+  text-shadow: 0 0, 5px 5px rgba(0, 0, 0, 0.5), 0 0, 0 0;
 }
 
 .title--a {
@@ -85,8 +94,6 @@ h3 {
   -ms-grid-rows: (minmax(fit-content, 455px))[2];
       grid-template-rows: repeat(2, minmax(-webkit-fit-content, 455px));
       grid-template-rows: repeat(2, minmax(fit-content, 455px));
-  -ms-grid-columns: (minmax(200px, 1fr))[autofit];
-      grid-template-columns: repeat(autofit, minmax(200px, 1fr));
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -107,6 +114,7 @@ h3 {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 0;
+  padding-top: 1.5rem;
 }
 
 .header--flex .header--col a:link,
@@ -121,15 +129,15 @@ h3 {
 .header--flex .header--col a:visited::after {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: -8px;
-  width: 100%;
-  height: 2px;
   background: currentColor;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
+  left: 0;
+  bottom: -8px;
+  width: 100%;
   -webkit-transform-origin: right;
           transform-origin: right;
+  height: 2px;
   -webkit-transition: -webkit-transform 250ms ease-in;
   transition: -webkit-transform 250ms ease-in;
   transition: transform 250ms ease-in;
@@ -169,7 +177,7 @@ h3 {
 }
 
 .header--flex .header--col img {
-  margin-left: 1rem;
+  margin: 1.5rem 0 1.5rem 1.5rem;
 }
 
 .header--icons {
@@ -235,7 +243,7 @@ h3 {
   background: white;
   bottom: 1rem;
   right: 1rem;
-  width: 20%;
+  width: 200px;
   margin: 0;
   padding: 0.5rem;
 }
@@ -245,17 +253,16 @@ h3 {
   src: url("../../Fonts/Forum.otf");
 }
 
-.nav--bg {
+#top--nav {
   background: #2a283f -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.5)));
   background: #2a283f linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  bottom: 0;
   -webkit-box-shadow: 0px 5px 10px 0px;
           box-shadow: 0px 5px 10px 0px;
   z-index: 2;
-  height: 12vh;
+  height: 80px;
 }
 
 #main--nav {
@@ -265,7 +272,7 @@ h3 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -281,15 +288,15 @@ h3 {
 #main--nav a:visited::after {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: -8px;
-  width: 100%;
-  height: 2px;
   background: currentColor;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
+  left: 0;
+  bottom: -8px;
+  width: 100%;
   -webkit-transform-origin: right;
           transform-origin: right;
+  height: 2px;
   -webkit-transition: -webkit-transform 250ms ease-in;
   transition: -webkit-transform 250ms ease-in;
   transition: transform 250ms ease-in;
@@ -346,11 +353,9 @@ h3 {
   display: -ms-inline-flexbox;
   display: inline-flex;
   justify-self: flex-end;
-  position: absolute;
   position: -webkit-sticky;
   position: sticky;
   bottom: 0;
-  margin: 0 0 0 calc(100% - 4rem);
   -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
           filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
@@ -369,13 +374,45 @@ h3 {
   color: #eee6c6;
 }
 
+#nav--icons {
+  background: #2a283f;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 90px;
+  z-index: 1;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+#nav--icons a:link,
+#nav--icons a:visited {
+  margin: 1rem;
+  font-size: 3rem;
+  color: #a67a62;
+}
+
+#nav--icons a:hover,
+#nav--icons a:active,
+#nav--icons a:focus {
+  outline: none;
+  color: #eee6c6;
+}
+
 @font-face {
   font-family: forum;
   src: url("../../Fonts/Forum.otf");
 }
 
 section {
-  min-height: 100vh;
+  min-height: 640px;
   max-height: -webkit-fit-content;
   max-height: -moz-fit-content;
   max-height: fit-content;
@@ -387,6 +424,7 @@ section {
   -ms-grid-columns: 10vw 80vw 10vw;
       grid-template-columns: 10vw 80vw 10vw;
   margin-bottom: 2rem;
+  margin-top: -100px;
 }
 
 .first--screen {
@@ -404,8 +442,8 @@ section {
   position: absolute;
   background: rgba(0, 0, 0, 0.8);
   background-attachment: sticky;
-  -webkit-clip-path: polygon(0 35vh, 100% 60%, 100% 100%, 0 100%);
-          clip-path: polygon(0 35vh, 100% 60%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 calc(100% - 80%), 100% 40%, 100% 100%, 0 100%);
+          clip-path: polygon(0 calc(100% - 80%), 100% 40%, 100% 100%, 0 100%);
   top: 0;
   z-index: -1;
   height: 100%;
@@ -436,8 +474,125 @@ section {
 
 .content p {
   text-align: center;
-  margin: 1rem;
+  padding: 1rem;
   font-size: 2rem;
+}
+
+.content .blog--flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content .blog--flex a:link,
+.content .blog--flex a:visited {
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
+  width: 90%;
+  height: 90%;
+}
+
+.content .blog--flex a:hover,
+.content .blog--flex a:active,
+.content .blog--flex a:focus {
+  outline: none;
+  width: 95%;
+  height: 95%;
+}
+
+.content .blog--flex a:hover .blog--title,
+.content .blog--flex a:active .blog--title,
+.content .blog--flex a:focus .blog--title {
+  padding: 1rem;
+  font-size: 2.5rem;
+}
+
+.content .blog--flex a:hover .blog--p,
+.content .blog--flex a:active .blog--p,
+.content .blog--flex a:focus .blog--p {
+  padding: 1.2rem 1.2rem 1.2rem 220px;
+  border: 6px solid #a67a62;
+}
+
+.content .blog--flex a:hover .blog--img,
+.content .blog--flex a:active .blog--img,
+.content .blog--flex a:focus .blog--img {
+  border: 6px solid #a67a62;
+}
+
+.content .blog--flex .blog--box {
+  position: relative;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 200px 3fr;
+      grid-template-columns: 200px 3fr;
+  -ms-grid-rows: (100px)[2];
+      grid-template-rows: repeat(2, 100px);
+  margin: 0.5rem;
+}
+
+.content .blog--flex .blog--box .blog--img {
+  border-radius: 10px;
+  margin: auto;
+  width: 80%;
+  max-height: 100%;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+.content .blog--flex .blog--box .blog--title {
+  position: absolute;
+  font-weight: bolder;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-size: 2rem;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+.content .blog--flex .blog--box .blog--p {
+  position: absolute;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  background: #d0baa7;
+  color: #2a283f;
+  font-size: 1.3rem;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  margin-top: 0;
+  padding: 1rem;
+  padding-left: 220px;
+  border-radius: 10px;
+  z-index: -1;
 }
 
 .content form {
@@ -450,7 +605,7 @@ section {
   border-radius: 10px;
   background: #d0baa7;
   color: #2a283f;
-  margin: 3rem 0rem;
+  margin: 3rem 0;
   padding: 2rem;
   font-size: 1.5rem;
 }
@@ -518,6 +673,7 @@ section {
   padding: 1rem;
   -ms-grid-column-align: center;
       justify-self: center;
+  margin-top: 1rem;
 }
 
 .content form .form--footer {
@@ -554,15 +710,15 @@ section {
 .content .agents a:visited::after {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: -8px;
-  width: 100%;
-  height: 2px;
   background: currentColor;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
+  left: 0;
+  bottom: -8px;
+  width: 100%;
   -webkit-transform-origin: right;
           transform-origin: right;
+  height: 2px;
   -webkit-transition: -webkit-transform 250ms ease-in;
   transition: -webkit-transform 250ms ease-in;
   transition: transform 250ms ease-in;
@@ -603,6 +759,7 @@ section {
 }
 
 .content .agents img {
+  margin: 2rem 0;
   background: white;
 }
 
@@ -623,15 +780,15 @@ section {
 .content .agents address a:visited::after {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: -8px;
-  width: 100%;
-  height: 2px;
   background: currentColor;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
+  left: 0;
+  bottom: -8px;
+  width: 100%;
   -webkit-transform-origin: right;
           transform-origin: right;
+  height: 2px;
   -webkit-transition: -webkit-transform 250ms ease-in;
   transition: -webkit-transform 250ms ease-in;
   transition: transform 250ms ease-in;
@@ -656,6 +813,10 @@ section {
 
 .content .agents .bio {
   width: 400px;
+  color: #2a283f;
+  background: #d0baa7;
+  border-radius: 10px;
+  padding: 1rem;
 }
 
 .content .why--us {
@@ -667,6 +828,7 @@ section {
 }
 
 .content .why--us .why--us--box .why--us--box--h3 {
+  font-size: 3rem;
   top: 0;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -680,6 +842,11 @@ section {
   border-radius: 10px;
   padding: 1rem;
   margin: 1rem;
+}
+
+.content .why--us .why--us--box .why--us--box--p p {
+  margin: 0;
+  font-size: 1.5rem;
 }
 
 footer {
@@ -732,8 +899,11 @@ footer .copy {
 }
 
 img {
-  margin: 3rem 0rem;
   width: 20rem;
+  border-radius: 10px;
+}
+
+.bs {
   -webkit-box-shadow: 0px 0px 20px 5px;
           box-shadow: 0px 0px 20px 5px;
 }
