--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -37,16 +37,19 @@
       margin: 0.5rem;
 
       .blog--img {
-        border-radius: 10px;
+        position: relative;
         margin: auto;
+        border-radius: 10px;
         width: 80%;
-        max-height: 100%;
+        height: 60%;
+        object-fit: cover;
         grid-column: 1 / 2;
         grid-row: 1 / 3;
       }
 
       .blog--title {
         position: absolute;
+        display: block;
         font-weight: bolder;
         align-self: center;
         font-size: 2rem;
@@ -177,11 +180,10 @@
     }
     .bio {
       width: 400px;
-
       color: $cBlue;
       background: $cSand-3;
       border-radius: 10px;
-      padding: 1rem;
+      padding: 2rem;
     }
   }
 
