--- a/CSS/2-base/_body.scss
+++ b/CSS/2-base/_body.scss
@@ -40,6 +40,10 @@ main {
 .gkg {
   color: $cCafe-5;
   font-family: forum;
+  &::selection {
+    color: $cEgg-1;
+    background: $cCafe-5;
+  }
 }
 
 h1 {
